<resources>
    <string name="app_name">ni_hon</string>
    <string name="welcomejp">(ようこそ)</string>
    <string name="join_us">Start learning!</string>
    <string name="errorLogInGoogle">" Error logging in with Google."</string>
    <string name="welcome">Glad to see you back! (っ◔◡◔)っ</string>
    <string name="welcome2">Welcome!</string>
    <string name="splash">がんばって</string>
    <string name="es">Spanish</string>
    <string name="en">English</string>
    <string name="ch">Chinese</string>
    <string name="language">Choose Language</string>
    <string name="configTitle">Choose Display Option: </string>
    <string name="configNight">Darck Mode: </string>
    <string name="configTitleLang">Choose App Language: </string>
    <string name="configLang">Language: </string>
    <string name="login_email">Email address</string>
    <string name="login_password">Password</string>
    <string name="forgotPswd">Forgotten your password?</string>
    <string name="login">log in</string>
    <string name="google">log in with google</string>
    <string name="sign">Don\'t have an account?</string>
    <string name="sign_username">Username</string>
    <string name="sign_rpswd">Repeat Password</string>
    <string name="sign_up">sign up</string>
    <string name="start_learn_jp">(いらっしゃいませ)</string>
    <string name="appBy">APP BY: </string>
    <string name="appMakers">Dani Mora \nAlexia Molina \nWei Shan</string>
    <string name="appResource">RESOURCES:</string>
    <string name="resource">From Internet (Freepick)</string>
    <string name="appDesign">DESIGNER: </string>
    <string name="designer">Alexia Molina</string>
    <string name="menuOptLogOut">Log out</string>
    <string name="menuOptAbout">About us</string>
    <string name="menuOptSetting">Settings</string>
    <string name="menuOptUser">User info</string>
    <string name="dialogTitle">(っ◔_◔)っ Reset Password (⁎˃ᴗ˂⁎)</string>
    <string name="dialogEmptEmail">(っ╥﹏╥)っ Email empty.</string>
    <string name="dialogSettingTitle">Restart App っ(⁎˃ᴗ˂⁎)っ</string>
    <string name="dialogSettingText">In some cases, the changes may not be applied correctly on certain devices. Would you like to restart?
        If you continue to experience issues after restarting, please contact us!</string>
    <string name="dialogMessage">\nEnter your email to reset password. </string>
    <string name="dialogPositive">Accept</string>
    <string name="dialogNegative">Cancel</string>
    <string name="dialogErrorTitle">An unexpected error has occurred (っ╥﹏╥)っ</string>
    <string name="dialogErrorText">Unable to load your data. Please check if you are <b><u>connected to the internet</u></b> and have the <b><u>Google services properly updated.</u></b></string>
    <string name="dialogNotExistTitle">Error to Login (っ╥﹏╥)っ</string>
    <string name="dialogErrorMenssage">We could not retrieve your data.</string>
    <string name="dialogNotExistText">The entered account does not exist, please verify if the password or email has been entered correctly.</string>
    <string name="dialogDeleteTitle">(っ╥﹏╥)っ Delete Account. </string>
    <string name="dialogDeleteMensage">Are you sure to delete this account?</string>
    <string name="logoutText">Signing out…</string>
    <string name="levelIndicator">Level: </string>
    <string name="tanukiStatus">Tanuki status: \n</string>
    <string name="egg">Egg</string>
    <string name="bad">In Danger</string>
    <string name="medium">Better</string>
    <string name="great">Fantastic</string>
    <string name="missing">Missing</string>
    <string name="score">Best score: \n</string>
    <string name="load">Loading…</string>
    <string name="verify">Verifying…</string>
    <string name="default_icon">DEFAULT</string>
    <string name="moon_icon">MOON</string>
    <string name="japan_icon">JAPAN</string>
    <string name="yukata_icon">YUKATA</string>
    <string name="bye_message">We hope to see you again!</string>
    <string name="bye_title">Goodbye for now!</string>
    <string name="error_delete_user">The user could not be deleted! You want retry?</string>
    <string name="error_sesion_expired">To perform this option, it is necessary to restart the session.</string>
    <string name="empty_fields">Empty Fields.</string>
    <string name="passDif">Different passwords.</string>
    <string name="passLess">The password could not be less than 6 digit.</string>
    <string name="userReg">User register successfully</string>
    <string name="userExist">This email already has account.</string>
    <string name="button_Start">Start Practice</string>
    <string name="dialog_complete_mes">(っ◔◡◔)っ You have completed this lesson! With: %d errors \nHave you successfully completed the lesson, but do you want to challenge yourself with this final question? (Difficult). </string>
    <string name="dialog_complete_titl">Congratulations!!</string>
    <string name="dialog_AlreadyComplete">Already Done!</string>
    <string name="dialog_retries">You have already completed this lesson.</string>
    <string name="fail_tries">Ups! incorrect. </string>
    <string name="lottie_bad" translatable="false">https://assets2.lottiefiles.com/packages/lf20_7qcbuqgk.json</string>
    <string name="kana">Write the letter/s for the next kana:</string>
    <string name="Start">Start</string>
    <string name="default_clientId" translatable="false">781413435137-bbbvkdh757ratt3ocbpnskhfl5b4fih3.apps.googleusercontent.com</string>
    <string name="unlock">NEW TANUKI UNLOCKED !!!</string>
    <string name="logged">user logged</string>
    <string name="checkEmail">Check your email</string>
    <string name="errorEmail">Could not send the email</string>
    <string name="hello_blank_fragment">.</string>
    <string name="lesson_1_1">
        This is the first (and most important!) column in hiragana.\n\nIt sets the pronunciation of every other column coming after it, because every other column is basically just the a-i-u-e-o column with consonants attached to them.\n\nThe same basic sound repeats over and over and over, with a consonant plus these five vowel sounds, so make sure you have the right pronunciation for these five right from the start.
    </string>
    <string name="lesson_1_2">
        <b>あ</b> is pronounced like "ah!" like when you come to a realization. It also sounds like the a in "car."\n\n
        To remember this kana, find the capital <b>A</b> inside of it. This "A" will tell you that this kana is also "a" aka あ. There is another similar kana, お, but that one doesn\'t have an "A" in it, which is how you can differentiate them.
    </string>
    <string name="lesson_1_3">
        <b>い</b> is pronounced like the ee in "eel."\n\n
        To remember this kana, just think of a couple of <b>ee</b>ls hanging out.\n\nThey\'re upright because they\'re trying to mimic the letter "i" which also stands upright and also happens to be the way you spell out this character in romaji.
    </string>
    <string name="lesson_1_4">
        <b>う</b> is pronounced like the oo in "ooh… ahhh!" when you\'re watching fireworks. In other words, it sounds like u in "UNO," the card game, or the number one in Spanish.\n\n
        To remember this kana, notice the <b>U</b> shape right in it! It\'s sideways but it\'s there, telling you what this kana is. Be careful, there\'s another similar hiragana, つ, but that one isn\'t wearing a hat like <b>U</b> (you) are. Ooh, ahh, what a nifty hat!
    </string>
    <string name="lesson_1_5">
        <b>え</b> is pronounced like the e in "egg."\n\n
        To remember this kana, think of it like an <b>e</b>xotic bird. The feathery thing on its head gives it away that it\'s exotic and not normal. It also lays <b>e</b>xotic <b>e</b>ggs, because it\'s an exotic bird, after all.
    </string>
    <string name="lesson_1_6">
        <b>お</b> is pronounced like you\'re saying "oh." It also sounds like the o in "origami."\n\n
        Can you see the letter <b>o</b> in here, two times? This one looks similar to あ, except for its one key difference: there are two letter "o" symbols visible in there. Make sure you use this to differentiate this kana (お) and that similar kana (あ). This is one area of hiragana where a lot of people trip up, but by using this mnemonic you will be able to figure them out every time.
    </string>
    <string name="lesson_2_1">
        The next set of hiragana is from the "k-column."\n\n
        This is just the K sound plus the vowel sounds you learned above, making it ka-ki-ku-ke-ko.\n\n
        There are no weird exceptions in this column either, so enjoy it while you can.
    </string>
    <string name="lesson_2_2">
        か is just the K sound plus あ, making a <b>ka</b> sound. It\'s pronounced like ka in "karma."\n\n
        See how this kana looks like a <b>mosquito</b>? What a convenient coincidence. Mosquitos happen to be called <b>か (ka)</b> in Japanese. You also say "<b>c</b>ut it out, darn mosquito!" when they try to suck your blood, so that should be easy to remember.
    </string>
    <string name="lesson_2_3">
        き is just the K sound plus い, making a <b>ki</b> sound.\n\n
        In fact, it sounds just like the word "key" which is the mnemonic we end up using.\n\n
        To remember this, notice how much it resembles a <b>key</b>.\n\n
        Note: In some fonts, the bottom part is detached from the main part. The pronunciation is still "ki" though!
    </string>
    <string name="lesson_2_4">
        く is just the K sound plus う, making a <b>ku</b> sound. It\'s pronounced "coo," like both syllables of the word "cuckoo" (or just the first syllable, depending on your variety of English).\n\n
        To remember this, think of this kana being the mouth of a <b>coo-coo / cuckoo</b> bird popping out saying "ku ku, ku ku!"
    </string>
    <string name="lesson_2_5">
        け is just the K sound plus え, making a <b>ke</b> sound. It\'s pronounced like ke in "kelp."\n\n
        See how this kana resembles some wiggly <b>kelp</b>?
    </string>
    <string name="lesson_2_6">
        こ is just the K sound plus お, making a ko sound. It\'s pronounced like co in "cohabitating." In British English, it is more like co in "coin."\n\n
        こ is a couple of <b>co-habitation</b> worms. They\'re so happy together, co-habitating the same area!\n\n
        Alternatively, you could imagine a couple of short <b>cords</b> laying on the ground next to each other.
    </string>
    <string name="lesson_3_1">
        Now that you have the "K-column" under your belt it\'s time for the "S-column."\n\n
        There is one weird exception in this column, and that\'s for "si" aka "shi."\n\n
        It\'s pronounced just like the word "she" in English, and doesn\'t quite follow the pattern you\'ve seen up until now. You\'ll want to use "sa-shi-su-se-so" for this column.
    </string>
    <string name="lesson_3_2">
        さ is just the S sound plus あ, making a sa sound. It\'s pronounced like sa in "salsa."\n\n
        Notice how this kana looks like two hands stirring a bowl of salsa. This salsa is so chunky and thick, you need two hands just to stir it!\n\n
        Note: Like き, the bottom part of さ is detached from the main part in some fonts.
    </string>
    <string name="lesson_3_3">
        し is just the SH sound plus い, making a shi sound. It\'s pronounced like shee in "sheep."\n\n
        Take note that this is the first "exception" kana where it doesn\'t follow the patterns that show up everywhere else.\n\n
        Instead of being "si" it\'s "shi" (though you will see it written both ways when dealing with romaji. One more reason why you ought to just learn hiragana already).\n\n
        This kana looks like a giant shepherd\'s crook used to herd sheep. Baaaa… get in that corral, sheep!
    </string>
</resources>