<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondolog2"
    tools:context=".About">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLeft"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideRight"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideTop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideTopIMG"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideBot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90"/>

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:background="@drawable/background_transparent"
        app:layout_constraintCircleRadius="200dp"
        app:layout_constraintEnd_toEndOf="@id/guideRight"
        app:layout_constraintStart_toStartOf="@id/guideLeft"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@id/guideTop"
        app:layout_constraintBottom_toTopOf="@id/guideBot">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="40dp"
            android:text="@string/appBy"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="15dp"
            android:text="@string/appMakers"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:textSize="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="40dp"
            android:text="@string/appResource"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="15dp"
            android:text="@string/resource"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:textSize="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="40dp"
            android:text="@string/appDesign"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/designer"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:textSize="20dp"/>


    </LinearLayout>
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/sakuraback"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:textColor="@color/black"/>
</androidx.constraintlayout.widget.ConstraintLayout>