<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.Nihon"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <ImageView
        android:id="@+id/tori"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/fuji"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_us"
        android:textAlignment="center"
        android:textColor="@color/black2"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/textweljp"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/tori"
        />
    <TextView
        android:id="@+id/textweljp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_learn_jp"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/textWelcome"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUsername"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:textColorHint="@color/purple"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/textweljp"
        app:startIconDrawable="@android:drawable/presence_online">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_gray"
            android:gravity="start"
            android:hint="@string/sign_username"
            android:inputType="text"
            android:maxLines="1"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textColorLink="@color/black" />

        <!--        <EditText-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:background="@color/white"-->
        <!--            android:hint="Usuario"-->
        <!--            android:imeOptions="actionDone" />-->

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:textColorHint="@color/purple"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/tilUsername"
        app:startIconDrawable="@android:drawable/sym_action_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_gray"
            android:gravity="start"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textColorLink="@color/black" />

        <!--        <EditText-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:background="@color/white"-->
        <!--            android:hint="Usuario"-->
        <!--            android:imeOptions="actionDone" />-->

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:textColorHint="@color/purple"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/tilEmail"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@android:drawable/ic_lock_idle_lock">

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_gray"
            android:gravity="start"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textColorLink="@color/black">

        </EditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRepeatPassword"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:textColorHint="@color/purple"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@android:drawable/ic_lock_idle_lock">

        <EditText
            android:id="@+id/editRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_gray"
            android:gravity="start"
            android:hint="@string/sign_rpswd"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textColorLink="@color/black">

        </EditText>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up"
        android:backgroundTint="@color/purple"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/tilRepeatPassword" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>