<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLeft"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideRight"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideTop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideTopIMG"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideBotIMG"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.77" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideBot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:orientation="vertical"
        android:background="@drawable/background_transparent"
        app:layout_constraintBottom_toTopOf="@id/guideBot"
        app:layout_constraintCircleRadius="200dp"
        app:layout_constraintEnd_toEndOf="@id/guideRight"
        app:layout_constraintStart_toStartOf="@id/guideLeft"
        app:layout_constraintTop_toTopOf="@id/guideTop">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="80dp"
            android:text="@string/configTitle"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            tools:ignore="UseSwitchCompatOrMaterialXml">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/gray"
                android:text="@string/configNight"
                android:textSize="20dp">

            </TextView>

            <Switch
                android:id="@+id/switchbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textOff="off"
                android:textOn="on" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"
            android:text="@string/configTitleLang"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/gray"
                android:text="@string/configLang"
                android:textSize="20dp" />

            <Button
                android:id="@+id/lang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/language"
                android:textColor="@color/black"/>
        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/sakuraback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideTopIMG">

    </ImageView>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginLeft="-13dp"
        android:src="@drawable/sakuraback2"
        app:layout_constraintStart_toStartOf="@id/guideLeft"
        app:layout_constraintTop_toTopOf="@id/guideBotIMG">

    </ImageView>

    <TextView
        android:id="@+id/versionApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>